tests/cases/generics/ok/generic-adt-surface.ari
enum Boxed[T] {
  Empty,
  Full(T),
}

fn main() -> i64 {
  return 0;
}
