tests/cases/generics/errors/generic-aggregate-nongeneric-type-args.ari
struct Span {
  start: i64,
}

struct Holder {
  value: Span[i64],
}

fn main() -> i64 {
  return 0;
}
